--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -42,9 +42,19 @@ android {
         enabled = true
     }
 
+    packagingOptions {
+        resources {
+            excludes += ['META-INF/AL2.0', 'META-INF/LGPL2.1']
+        }
+    }
+
     sourceSets {
         androidTest.java.srcDirs += "src/sharedTest/java"
         test.java.srcDirs += "src/sharedTest/java"
+    }
+
+    testOptions {
+        animationsDisabled = true
     }
 }
 
@@ -55,6 +65,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -92,7 +103,7 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     //Room
     implementation 'androidx.room:room-ktx:2.5.0-alpha01'
@@ -132,4 +143,10 @@ dependencies {
     androidTestImplementation("io.strikt:strikt-core:0.31.0")
 
     implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
+
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
+    androidTestImplementation "com.squareup.okhttp3:okhttp-tls:4.9.3"
+
+    debugImplementation "androidx.fragment:fragment-testing:1.4.1" //launchFragmentInContainer
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2' //RecyclerViewActions
 }
